<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Title01"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textAllCaps="true"
        android:text="@string/about" />

    <TextView
        android:id="@+id/description"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:textColor="@color/medium"
        android:lineSpacingExtra="@dimen/margin_2dp"
        android:theme="@style/Body"
        android:text="@string/about_text"
        android:layout_width="@dimen/margin_0dp"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20dp"/>

    <TextView
        android:id="@+id/subSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_20dp"
        android:theme="@style/Title02"
        android:layout_marginStart="@dimen/margin_20dp"
        android:text="@string/design_development" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/margin_110dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/dtt_banner"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintTop_toBottomOf="@+id/subSection"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ddt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/logo"
        app:layout_constraintStart_toEndOf="@+id/logo"
        android:layout_marginTop="@dimen/margin_15dp"
        android:theme="@style/Body"
        android:textColor="@color/strong"
        android:layout_marginStart="@dimen/margin_20dp"
        android:text="@string/by_dtt" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ddt"
        app:layout_constraintStart_toEndOf="@+id/logo"
        android:layout_marginTop="@dimen/margin_0dp"
        android:theme="@style/Body"
        android:textColor="@color/blue"
        android:autoLink="web"
        android:layout_marginStart="@dimen/margin_20dp"
        android:text="@string/dtt_link" />
</androidx.constraintlayout.widget.ConstraintLayout>