<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:theme="@style/Title01"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/main_title" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search"
        app:theme="@style/SearchView"
        android:background="@drawable/search_question_bg"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="@dimen/margin_20dp"
        app:queryHint="@string/search_hint"
        app:iconifiedByDefault="false"
        android:layoutDirection="rtl"
        android:layout_width="@dimen/margin_0dp"
        android:layout_marginStart="@dimen/margin_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20dp"
        app:closeIcon="@drawable/ic_close"
        app:searchIcon="@null"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/search"
        android:layout_marginStart="@dimen/margin_20dp"
        android:paddingBottom="@dimen/margin_120dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyContainer"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/emptyImg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/search_state_empty" />

        <TextView
            android:id="@+id/emptyTitle"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/Input"
            android:text="@string/no_result"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyImg"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/emptyDesc"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/Input"
            android:text="@string/try_another"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyTitle"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>