<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainDetailFragment">

    <ImageView
        android:id="@+id/expandedImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_220dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/titleImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_190dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_rounded"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_30dp"
                android:theme="@style/Title01"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="@string/main_title" />

            <LinearLayout
                android:layout_width="@dimen/margin_0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                app:layout_constraintTop_toTopOf="@+id/price"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/bed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:drawableLeft="@drawable/ic_bed"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    app:layout_constraintStart_toStartOf="parent"
                    android:theme="@style/Detail"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:text="1" />

                <TextView
                    android:id="@+id/bath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:drawableStart="@drawable/ic_bath"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    app:layout_constraintStart_toStartOf="parent"
                    android:theme="@style/Detail"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:text="1" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:drawableLeft="@drawable/ic_layers"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    app:layout_constraintStart_toStartOf="parent"
                    android:theme="@style/Detail"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:text="4" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:drawableLeft="@drawable/ic_location"
                    app:layout_constraintTop_toBottomOf="@id/price"
                    app:layout_constraintStart_toStartOf="parent"
                    android:theme="@style/Detail"
                    android:drawablePadding="@dimen/margin_5dp"
                    android:text="1.8km" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_20dp"
                android:theme="@style/Title02"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/description"
                android:layout_width="@dimen/margin_0dp"
                android:lineSpacingExtra="@dimen/margin_2dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:theme="@style/Body"
                android:textColor="@color/medium"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:text="jkjjhgfhjkhbgvhbjnkmnbvcbnmnbvcfdghjkmnb vg ghjnbvcgftgyhujnbvgf hjvghjnbvgfhjnm bvghjnb@string/main_title" />

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_20dp"
                android:theme="@style/Title02"
                android:layout_marginStart="@dimen/margin_20dp"
                android:text="@string/location" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_200dp"
                android:layout_margin="@dimen/margin_20dp"
                android:layout_marginBottom="@dimen/margin_20dp"
                app:layout_constraintTop_toBottomOf="@+id/locationTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>